Fix T64300: Missing update of original data-block on redo

Dependency graph was not yet set as active when is used by
operator which is being redone.